@@ -15,6 +15,12 @@ RELEASE 0.XX - XXX
   - Fix the --keep-going flag so it builds all possible targets even when
     a later top-level target depends on a child that failed its build.
 
+  From Rob Managan:
+
+  - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).
+
+  - Re-run LaTeX when it issues a package warning that it must be re-run.
+
 
 
 RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600
